applications/pulsar/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pulsar
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: ListenerSet
      name: pulsar
  hostnames:
    - "dev.pulsar.jynolen.fr"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pulsar-proxy
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /proxy
    - backendRefs:
      - group: ""
        kind: Service
        name: pulsar-dekaf
        port: 8090
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /dekaf
# ---
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: SecurityPolicy
# metadata:
#   name: echoserver
# spec:
#   targetRefs:
#     - group: gateway.networking.k8s.io
#       kind: HTTPRoute
#       name: echoserver
#   oidc:
#     provider:
#       issuer: "https://keycloak.jynolen.fr/realms/kubernetes"
#     clientID: "echoserver"
#     clientSecret:
#       name: "echoserver-oidc-secret"
#     redirectURL: "https://echo.jynolen.fr/oauth2/callback"
#     logoutPath: "/logout"
